# softwareplc

./: .gitignore  INSTALL  Make.flags.in  Makefile.in  README  Rules.mk.in  configure.in
kernel-library/: .gitignore  Makefile.in
kernel-library/include/: cdevicedriver.h  cdevicemanager.h  cmemory.h  cmemorymanagement.h  cmutex.h  cpropertyin.h  cpropertyio.h  cpropertyout.h  cresult.h  cspinlock.h  cvariable.h  data_types.h  plc.h  plc_compat.h  plc_errors.h
plc/motorek/: motorek.plc
plc/motorek.2/: Makefile.in  motorek.plc
plc/motorek.2/sources/: Makefile.in
plc/skeleton/: Makefile.in  Makefile.in.skel
plc/snake/: snake.plc
plc2cpp/: .gitignore  Makefile.in  mkplc.sh  mkplc.sh.in  plc2cpp.l  plc2cpp.y  support.cpp
plc2cpp/holders/: Makefile.in  ccodeprocessor.cpp  ccontainerbase.cpp  ccontainerconfiguration.cpp  ccontainerfbprogram.cpp  ccontainerfunction.cpp  ccontaineril.cpp  ccontainerincludes.cpp  ccontainerpcall.cpp  ccontainertask.cpp  ccontainervarblock.cpp  ccontainervariable.cpp
plc2cpp/include/: plc2cpp_globals.h
rtlinux/plc_devicemanager/: Makefile.in  README  manager.cpp
rtlinux/plc_labcard/: .gitignore  Makefile.in  README  drv.cpp  drv.h  drv_sup.c  labcard.cpp
rtlinux/plc_lpt/: Makefile.in  drv.cpp  drv.h  drv_sup.c  lpt.cpp
rtlinux/plc_tracedriver/: Makefile.in  README  trace.cpp
rtlinux/plc_userspace/: Makefile.in  README  communicate.cpp  userspace.cpp  userspace.h
rtlinux/rtl_cpp/: Makefile.in  README  rtl_cpp.c  rtl_cpp.h
vim/: plc.vim
visualisation/: measure.cpp  visualisationapp.cpp  visualisationcanvas.cpp  visualisationmain.cpp
visualisation/include/: measure.h  measurevector.h  plc_uspace.h  resources.h  visualisationapp.h  visualisationcanvas.h  visualisationmain.h
(+13 files in other folders)
