dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)
PACKAGE="rtlinux_plc"
VERSION="$Revision: 1.3 $"

dnl Check for programs
AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_INSTALL

dnl Check for library functions

dnl Check for RT-Linux installed
AC_MSG_CHECKING(Searching for RT-Linux (rtl-config))
if (test -n `which rtl-config`); then
	AC_MSG_RESULT(found)
	rtl-config --mk > rtl.mk
else
	AC_MSG_ERROR(not found on search path)
fi

dnl Check for kernel modules directory
AC_MSG_CHECKING(Searching kernel modules directory)
if (test -d "/lib/modules/"`uname -r`); then
	AC_MSG_RESULT(found)
	KERNEL_MODULES="/lib/modules/"`uname -r`"/misc"
fi

dnl Setting makefiles names
AC_MSG_CHECKING(Searching for Makefile's)
for x in `find . -name Makefile.in`; do
	F=`echo $x|sed 's/.in$//g'`;
	MAKEFILES="$MAKEFILES $F";
done
AC_MSG_RESULT(done)

dnl Search test modules for PLC library
AC_MSG_CHECKING(Searching for kernel library tests)
for x in `pwd`/kernel-library/tests/t_*.cpp; do
	TOBJ=`echo $x|sed 's/^\(.*\)\/t_\(.*\).cpp/\2/g'`;
	TEST_OBJECTS="$TEST_OBJECTS t_$TOBJ.o";
	TEST_SOURCES="$TEST_SOURCES t_$TOBJ.cpp";
done
AC_MSG_RESULT(done)

MAKEFILES="$MAKEFILES Rules.mk Make.flags";

INCLUDES="-I`pwd`/kernel-library/include -I`pwd`/plc2cpp/include"
PLC_LIBS="`pwd`/lib"

CFLAGS="$CFLAGS $INCLUDES"
CXXFLAGS="$CXXFLAGS $INCLUDES"
LDFLAGS="$LFLAGS -L$PLC_LIBS -lpthread"

MAKEFILES="$MAKEFILES plc2cpp/mkplc.sh"

AC_SUBST(KERNEL_MODULES)
AC_SUBST(OBJECTS)
AC_SUBST(MAKEFILES)
AC_SUBST(PLC_LIBS)
AC_SUBST(TEST_OBJECTS)
AC_SUBST(TEST_SOURCES)
AC_SUBST(PTEST_OBJECTS)
AC_SUBST(PTEST_SOURCES)

AC_OUTPUT($MAKEFILES)
